2012-08-26

	* src/context.c:
	* src/context_priv.c:
	* src/context_priv.h: libotr was exporting exactly two functions
	without the otrl_ prefix: context_priv_new and
	context_priv_force_finished.  Change the names of these
	functions to start with otrl_.  Thanks to David Goulet
	<dgoulet@ev0ke.net> for noticing it.

2012-08-25

	* src/sm.c:
	* src/context.c:
	* src/auth.c:
	* src/message.c: If OTRL_DEBUGGING is non-zero, then a message
	containing a special debug string ("?OTR!") will cause debug
	info to be printed to stderr.  (This #define should *not* be set
	in release code.)

	* src/auth.c:
	* src/auth.h:
	* src/message.c: Correct the logic for handling incoming COMMIT
	messages when we've recently sent our own COMMIT message.

	* src/message.c: Don't update the recent_sent_child field to
	point to the master context just becuase we sent a version 3
	COMMIT message (which has no destination instance).

2012-08-24

	* README:
	* configure.ac: Prepare for release 4.0.0

2012-08-24

	* src/message.c: Consider copying the master auth context to the
	child, even if the child is already in ENCRYPTED, because we
	might be trying to refresh a private conversation.

2012-08-22

	* configure.ac: Use gcc and ld hardening flags, where possible.
	* configure.ac:
	* src/auth.c:
	* src/dh.c:
	* src/mem.c:
	* src/privkey.c:
	* src/proto.c:
	* src/sm.c:
	* toolkit/sesskey.c: Build cleanly with -Wall -Wextra
	-Wformat-security -Wno-unused-parameter

2012-08-17

	* src/message.c: Don't call memchr(foo,'\0',-1) even if it has
	no ill effects.  Thanks to George Kadianakis
	<desnacked@riseup.net> for the report.

2012-07-20

	* src/message.c, src/instag.c, toolkit/parse.c, src/sm.c,
	src/proto.c, src/privkey.c, src/auth.c, src/context.[ch]:
	Fix some memory leaks, some NULL pointer handling, and
	compilation warnings.  Thanks to Paul Wouters
	<pwouters@redhat.com> for the report.

	* src/message.c: Better handling of OTRv3 fragments.

2012-07-19
